[gd_scene load_steps=3 format=3 uid="uid://c1styef3npjsw"]

[ext_resource type="Script" path="res://level/ItemSpawner.gd" id="1_4wa7e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4sedq"]
radius = 16.0

[node name="ItemSpawner" type="Node2D"]
script = ExtResource("1_4wa7e")

[node name="pickup_range" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="pickup_range"]
shape = SubResource("CircleShape2D_4sedq")

[node name="item_sprite" type="Sprite2D" parent="."]

[node name="respawn_timer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[connection signal="body_entered" from="pickup_range" to="." method="_on_pickup_range_body_entered"]
[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
